lb8clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-end
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8080
  selector:
    app: backend
